--- a/data/guest/lashou_demo/lashou_demo.html
+++ b/data/guest/lashou_demo/lashou_demo.html
@@ -14,7 +14,7 @@
 	}
 	var serviceInvokeUrl = "../../../rest/invokerealrest";
 </script>
-<title>demo</title>
+<title>lashou_demo</title>
 
 <link rel="stylesheet" type="text/css" href="../../../jslibs/jquerymobile/1.0rc03/jquery.mobile.css" >
 <link rel="stylesheet" type="text/css" href="../../../controls/css/control.css" >
@@ -27,17 +27,21 @@
 <script type="text/javascript" src="../../../controls/lib/ui.control.js"></script>
 <script type="text/javascript" src="../../../controls/lib/ui.container.js"></script>
 <script type="text/javascript" src="../../../controls/ui.div/ui.div.js"></script>
+<script type="text/javascript" src="../../../controls/ui.urlviewer/ui.urlviewer.js"></script>
 <script type="text/javascript" src="../../../controls/ui.thumblist/ui.thumblist.js"></script>
+<script type="text/javascript" src="../../../controls/ui.baidumap/ui.baidumap.js"></script>
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=1.4&ak=3js3QszpNr63IeEUmR7K9068"></script>
+<script type="text/javascript" src="../../../controls/ui.selectbox/ui.selectbox.js"></script>
 <script type="text/javascript" src="../../../controls/ui.text/ui.text.js"></script>
 <script type="text/javascript" src="../../../controls/ui.radiobuttonh/ui.radiobuttonh.js"></script>
 <script type="text/javascript" src="../../../controls/ui.textlist/ui.textlist.js"></script>
 <script type="text/javascript" src="../../../controls/ui.date/ui.calendar_date.js"></script>
 <script type="text/javascript" src="../../../controls/ui.date/calendar2013.js"></script>
 <script type="text/javascript" src="../../../controls/ui.textbutton/ui.textbutton.js"></script>
-<script type="text/javascript" src="../../../controls/ui.image/ui.image.js"></script>
-<script type="text/javascript" src="../../../controls/ui.label/ui.label.js"></script>
 <script type="text/javascript" src="../../../controls/ui.radiobuttonv/ui.radiobuttonv.js"></script>
+<script type="text/javascript" src="../../../services/lashou/lashou.js"></script>
 <script type="text/javascript" src="../../../services/goBack/goBack.js"></script>
+<script type="text/javascript" src="../../../services/lashou_city/lashou_city.js"></script>
 <script type="text/javascript" src="../../../services/changePage/changePage.js"></script>
 
 
@@ -47,8 +51,9 @@
 <div id="PAGE1" data-role="page"></div>
 <div id="PAGE2" data-role="page"></div>
 <div id="PAGE3" data-role="page"></div>
+<div id="PAGE4" data-role="page"></div>
 
 </body>
 
-<script type="text/javascript" src="demo.js?1418955476776"></script>
+<script type="text/javascript" src="lashou_demo.js?1418976952430"></script>
 </html>
